--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
+  @include('partials/head.html')
 
-@include('partials/head.html')
-
-<body class="page__body">
-  <div class="site-container">
-    @include('partials/header.html')
-    <main class="main">
-    </main>
-    @include('partials/footer.html')
-  </div>
-</body>
-
+  <body class="page__body">
+    <div class="site-container">
+      <main class="main">@include('partials/hero.html')</main>
+    </div>
+  </body>
 </html>
