--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 
   <body class="page__body">
     <div class="site-container">
-      <main class="main">@include('partials/hero.html')</main>
+      <main class="main">
+        @include('partials/hero.html') @include('partials/modal.html')
+      </main>
     </div>
   </body>
 </html>
